k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: simplesim
  labels:
    name: simplesim
    app: simplesim
