k8s/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: https
  namespace: simplesim
spec:
  parentRefs:
    - name: gateway
      namespace: istio-gateway
  hostnames: ["simplesim.edgez.live"]
  rules:
    - backendRefs:
        - name: oauth2-proxy-simplesim
          port: 80
